refactor: putting all business logic changes, external services configurations, and security settings up to date