@@ -12,16 +12,14 @@ import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.io.OutputStream;
-import java.util.List;
+import java.util.Collections;
 
 @Component
 public class CustomAccessDeniedHandler implements AccessDeniedHandler {
-    private static final String DEFAULT_ACCESS_DENIED_MESSAGE = "Access denied. You don't have permission to access this resource";
-
     @Override
     public void handle(HttpServletRequest request, HttpServletResponse response, AccessDeniedException accessDeniedException) throws IOException {
         final ErrorMessageResponse errorMessageResponse = new ErrorMessageResponse(
-                List.of(DEFAULT_ACCESS_DENIED_MESSAGE), HttpStatus.FORBIDDEN.getReasonPhrase(), HttpStatus.FORBIDDEN.value()
+                Collections.singletonList("Access denied. You don't have permission to access this resource"), HttpStatus.FORBIDDEN.getReasonPhrase(), HttpStatus.FORBIDDEN.value()
         );
 
         response.setContentType(MediaType.APPLICATION_JSON_VALUE);
